--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,22 @@
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
-	<script src="chrome-extension://mhjfbmdgcfjbbpaeojofohoefgiehjai/edge_pdf/dist/pdf_content_view.bundle.js"></script>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<cucumber.version>7.14.0</cucumber.version>
+		<suiteXmlFile>TestNG_Files\testng.xml</suiteXmlFile>
+	</properties>
+
+	<dependencies>
+		<!-- Junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
+	
 </project>
